packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-default-cel/kyverno-test/patched.yaml
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  name: default
  namespace: update-automountserviceaccounttokens-default-2
