packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-default-cel/kyverno-test/resource.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: default
  namespace: update-automountserviceaccounttokens-default-2
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: not-default
  namespace: update-automountserviceaccounttokens-default-2
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: default
  namespace: update-automountserviceaccounttokens-default-unconfigured
